# TradingApp

./: .claudeignore  .editorconfig  .gitignore  CLAUDE.md  ENVIRONMENT.md  backlog.md  package-lock.json  pyproject.toml  start_app.bat  test_ddgs.py  test_ddgs_v2.py  test_ddgs_v3.py  test_rss.py
.agent/workflows/: start_app.md
.claude/: settings.local.json
ai_engine/: analyze.py  orchestrator.py  tool_manager.py
ai_engine/agents/: analyst.py  base.py  chartist.py  executioner.py  fundamentalist.py  quant.py  risk_officer.py  scout.py
ai_engine/data/: analyst_cache.json
ai_engine/prompts/: analyst.md  chartist.md  executioner.md  fundamentalist.md  quant.md  risk_officer.md  scout.md
ai_engine/tools/: document_tools.py  earnings_tools.py  insider_tools.py  macro_tools.py  market_tools.py  ml_tools.py  peer_tools.py  social_tools.py  technical_tools.py
ai_engine/utils/: plotting.py  web_search.py
backend/: .env.template  data.py  fuzz_search.py  main.py  models.py  requirements.txt  test_curl_fix.py  test_order.json  test_ssl_fix.py  test_utility_fix.py
backend/data/: database.db  database.db.bak
backend/db_models/: db.py
backend/scripts/: create_password.py  migrate_json.py
backend/services/: ai_service.py  alerts.py  analysis_history.py  auth.py  db_service.py  document_service.py  jobs.py  llm_provider.py  market_data.py  news.py  paper_trading.py  screener.py  sector_data.py  sentiment.py  watchlist.py
backend/tests/: conftest.py  test_analysis_history.py  (+6 more)
frontend/: .prettierrc.json  eslint.config.mjs  package-lock.json  package.json
(+49 files in other folders)
